Kubernetes Project/simple_blog_api_ts-master/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
          - name: simple-blog-api
            image: anvita1/simple_blog_api
            ports:
              - containerPort: 3000
            resources:
                limits:
                  memory: "128Mi"
                  cpu: "500m"
