Kubernetes Project/simple_blog_api_ts-master/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-persistent-volume-claim
      containers:
          - name: postgres
            image: postgres
            ports:
              - containerPort: 5432
            volumeMounts:
              - name: postgres-storage
                mountPath: /var/lib/postgresql/data
                subPath: postgres
            resources:
                  limits:
                    memory: "128Mi"
                    cpu: "500m"
